Working API fetches, started on event listeners.

--- a/index.html
+++ b/index.html
@@ -17,23 +17,23 @@
 
     <div class="container" id="mainContainer">
         <div class="row">
-            <div class="col-4">
-                <p id="pokemonName1" style="text-align: center">Charizard</p>
-                <img src="./assets/charizard.png" class="img-fluid" alt="Responsive image">
+            <div class="col-5 text-center">
+                <p id="pokemonName1" style="text-align: center"></p>
+                <img id="leftPokemonPic" src="" class="img-fluid" alt="">
                 <p id="pokemonLevel1" style="text-align: center">Level: 88</p>
             </div>
-            <div class="col-4 justify-content-center" id="centerColumn">
+            <div class="col-2 justify-content-center" id="centerColumn">
             <br />
             <br />
             <br />
             <br />
             <br />
             <br />
-            <p id="centerText">Battle!</p>
+            <button id="battleButton" type="button" class="btn btn-secondary btn-lg">BATTLE!</button>
             </div>
-            <div class="col-4">
-                <p id="pokemonName2" style="text-align: center">Blastoise</p>
-                <img src="./assets/blastoise.png" class="img-fluid" alt="Responsive image">
+            <div class="col-5 text-center">
+                <p id="pokemonName2" style="text-align: center"></p>
+                <img id="rightPokemonPic" src="" class="img-fluid" alt="">
                 <p id="pokemonLevel2" style="text-align: center">Level: 82</p>
             </div>
         </div>
